--- a/src/server/admin/ui/css/setupstyle.css
+++ b/src/server/admin/ui/css/setupstyle.css
@@ -15,3 +15,10 @@
     justify-content: center;
     align-items: center;
 }
+
+.explanation {
+    padding-left: 5%;
+    padding-right: 5%;
+    text-align: center;
+    font-style: italic;
+}
