--- a/src/server/ui/home/main.css
+++ b/src/server/ui/home/main.css
@@ -60,3 +60,34 @@
     border: none;
     cursor: pointer;
 }
+
+nav {
+    padding: 30px;
+}
+
+nav a {
+    font-weight: bold;
+    color: var( --primary-color );
+}
+
+nav .home {
+    color: #42b983;
+    text-decoration: underline;
+    cursor: default;
+}
+
+html, body {
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    color: var( --primary-color );
+    background-color: var( --background-color );
+    transition: all 0.5s;
+}
+
+body {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
