add password setting option with password view

--- a/src/server/ui/home/main.css
+++ b/src/server/ui/home/main.css
@@ -84,6 +84,7 @@ html, body {
     color: var( --primary-color );
     background-color: var( --background-color );
     transition: all 0.5s;
+    font-family: Avenir, Helvetica, Arial, sans-serif;
 }
 
 body {
