--- a/src/server/ui/home/templates/modern/index.html
+++ b/src/server/ui/home/templates/modern/index.html
@@ -20,6 +20,6 @@
         </nav>
         <img src="/otherAssets/logo.png" alt="libreevent logo" class="logo">
         <h1>Welcome to {{ pageName }}!</h1>
-        <p>{{ description }}</p>
+        <p>{{ data.description }}</p>
     </body>
 </html>
