--- a/src/server/ui/home/main.css
+++ b/src/server/ui/home/main.css
@@ -92,3 +92,10 @@ body {
     flex-direction: column;
     align-items: center;
 }
+
+.content {
+    width: 98%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
