--- a/src/server/ui/home/templates/modern/index.html
+++ b/src/server/ui/home/templates/modern/index.html
@@ -18,8 +18,10 @@
             <a href="/account">Account</a> |
             <button onclick="changeTheme();" id="themeSelector">&#9789;</button>
         </nav>
-        <img src="/otherAssets/logo.png" alt="libreevent logo" class="logo">
-        <h1>Welcome to {{ pageName }}!</h1>
-        <p>{{ data.description }}</p>
+        <div class="content">
+            <img src="/otherAssets/logo.png" alt="libreevent logo" class="logo">
+            <h1>Welcome to {{ pageName }}!</h1>
+            <p>{{ data.description }}</p>
+        </div>
     </body>
 </html>
