--- a/src/server/ui/home/templates/modern/index.html
+++ b/src/server/ui/home/templates/modern/index.html
@@ -19,9 +19,15 @@
             <button onclick="changeTheme();" id="themeSelector">&#9789;</button>
         </nav>
         <div class="content">
-            <img src="/otherAssets/logo.png" alt="libreevent logo" class="logo">
-            <h1>Welcome to {{ pageName }}!</h1>
+            <div class="title">
+                <img src="/otherAssets/logo.png" alt="libreevent logo" class="logo">
+                <div class="title-text">
+                    <h1>{{ pageName }}</h1>
+                    <footer>{{ data.subtitle }}</footer>
+                </div>
+            </div>
             <p>{{ data.description }}</p>
+            <a href="/tickets" class="button">Buy tickets</a>
         </div>
     </body>
 </html>
