--- a/src/server/ui/home/templates/modern/supportFiles/style.css
+++ b/src/server/ui/home/templates/modern/supportFiles/style.css
@@ -7,6 +7,49 @@
 *
 */
 
+.title {
+    height: 80vh;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-color: rgba( 0, 0, 0, 0.1 );
+    background-size: cover;
+    background-image: url( /startPage/assets/banner.jpg );
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100vw;
+    padding: 0;
+    margin: 0;
+}
+
+.title-text {
+    background-color: var( --overlay-color );
+    color: var( --secondary-color );
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    padding: 2%;
+    margin-top: 1%;
+}
+
+.button {
+    transition: all 1s;
+    padding: 1%;
+    border-radius: 50px;
+    background-color: var( --accent-background );
+    cursor: pointer;
+    color: var( --secondary-color );
+    margin-bottom: 5%;
+    text-decoration: none;
+}
+
+.button:hover {
+    background-color: var( --accent-background-hover );
+    border-radius: 10px;
+}
+
 .logo {
-    height: 50vh;
+    height: 40%;
 }
